# cellumina

./: Cargo.toml  README.md  cellumina_output.txt
examples/game_of_life/: gol_init.txt  main.rs
examples/labyrinth/: main.rs
examples/rps/: main.rs
examples/rule90/: main.rs
examples/sand/: main.rs
examples/to_string/: basic_rule.cel  basic_rule_serde.toml  main.rs  sand_rules.cel
examples/various/: main.rs
src/: automaton.rs  builder.rs  cell_state.rs  error.rs  gol_init.txt  lib.rs  main.rs  rule.rs  sand_init.txt  shader.wgsl  shader_info.rs  state.rs
src/graphic/: controller.rs  displayer.rs  mod.rs  model.rs  shader.wgsl  state.rs  vertex.rs  view.rs
src/rule/: environment_rule.rs  mod.rs  pattern_rule.rs
src/rules/: mod.rs  pattern_rule.rs
tests/game_of_life/: gol_init2.txt  gosper_glider.txt  main.rs
tests/sand/: main.rs
tests/to_string/: basic_rule.cel  main.rs
tutorial/: book.toml  imagecaptions.css
tutorial/src/: SUMMARY.md  automata.md  cellumina.md  introduction.md  sources.md
tutorial/src/.examples/oned/: rule90.md
tutorial/src/cellumina/: display.md  rules.md  state.md
tutorial/src/cellumina/rules/: custom.md  enviroment.md  pattern.md
tutorial/src/examples/: oned.md  other.md  sand.md
tutorial/src/examples/sand/: custom.md  death.md  environment.md  pattern.md
