[package]
name = "cellumina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1.13.1", features = [ "derive" ] }

env_logger = "0.10"
log = "0.4"

image = "0.24"

rayon = "1.7"

grid = "0.10"

rand = "0.8"
