[package]
name = "cellumina"
version = "0.1.2"
edition = "2021"
authors = ["Linus Mußmächer linus.mussmaecher@gmail.com"]
license = "MIT"
description = "A library to configure and run cellular automata."
readme = "README.md"
repository = "https://github.com/Linus-Mussmaecher/cellumina"
homepage = "https://github.com/Linus-Mussmaecher/cellumina"
keywords = ["cellular", "automaton", "WebGL"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic dependencies
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
grid = "0.10"
rand = "0.8"
image = "0.24"

# display dependencies
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1.13.1", features = [ "derive" ] }

# logging
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
toml = "0.7"

[features]