[package]
name = "cellumina"
version = "0.1.3"
edition = "2021"
authors = ["Linus Mußmächer linus.mussmaecher@gmail.com"]
license = "MIT"
description = "A library to configure and run cellular automata."
readme = "README.md"
repository = "https://github.com/Linus-Mussmaecher/cellumina"
homepage = "https://github.com/Linus-Mussmaecher/cellumina"
keywords = ["cellular", "automaton", "WebGL"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic dependencies
rayon = "1.7"
grid = "0.10"
rand = "0.8"
image = "0.24"
# logging
log = "0.4"
# serde
serde = { version = "1.0", features = ["derive"] }

# display dependencies
winit = {version = "0.28", optional = true}
wgpu = {version = "0.17", optional = true}
pollster = {version = "0.3", optional = true}
bytemuck = { version = "1.13.1", features = [ "derive" ], optional=true }
native-dialog = {version =  "0.6", optional = true}

[dev-dependencies]
env_logger = "0.10"
toml = "0.7"

[features]
display = ["dep:winit", "dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:native-dialog"]


[[example]]
name = "game_of_life"
required-features = ["display"]

[[example]]
name = "sand"
required-features = ["display"]

[[example]]
name = "to_string"
required-features = ["display"]

[[example]]
name = "rule90"
required-features = ["display"]
